Fix typecheck_is_object/is_fundamental

We don't need to check if priv == NULL, the purpose of those
calls is only to check the JSClass. Additionally, we don't
need to throw an exception, do_base_typecheck() already does.

https://bugzilla.gnome.org/show_bug.cgi?id=725061